# trex

./: .gitignore  .pre-commit-config.yaml  .versionrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PRD.md  README.md  WIREFRAME.md  linkedin-post-0.3.0.txt  linkedin-post.txt  x-post.txt
.github/workflows/: ci.yml  release.yml
scripts/: cargo-version.js
src/: backend.rs  directory.rs  git.rs  health.rs  lib.rs  main.rs  process.rs  sysinfo.rs  template.rs  theme.rs
src/backend/: convert.rs  dto.rs  summary.rs  tests.rs
src/tmux/: commands.rs  mod.rs  parser.rs  session.rs  window.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/app/: agent.rs  directory.rs  filter.rs  mod.rs  naming.rs  preview.rs  session.rs  window.rs
src/tui/ui/: agents.rs  background.rs  barchart.rs  constants.rs  directory.rs  expanded.rs  mod.rs  naming.rs  normal.rs  overview.rs  session_row.rs  sessions.rs  stats_overlay.rs
src/tui/ui/stats_overlay/: activity.rs  health.rs  layout.rs  resources.rs
