[package]
name = "trex-cli"
version = "0.4.1"
edition = "2024"
description = "Fast tmux session manager with fuzzy finding, system monitoring, and AI agent tracking"
license = "ISC"
repository = "https://github.com/blackopsrepl/trex"
homepage = "https://github.com/blackopsrepl/trex"
readme = "README.md"
keywords = ["tmux", "terminal", "tui", "session-manager", "fuzzy-finder"]
categories = ["command-line-utilities"]
exclude = [
    "screenshot.png",
    ".github/",
    ".claude/",
    "zoyd.toml",
    "CLAUDE.md",
    ".bash_profile",
    ".bashrc",
    ".gitconfig",
    ".gitmodules",
    ".idea",
    ".mcp.json",
    ".profile",
    ".ripgreprc",
    ".vscode",
    ".zprofile",
    ".zshrc",
    "PRD.md",
    "linkedin-post-*",
    "progress.txt",
]

[[bin]]
name = "trex"
path = "src/main.rs"

[features]
ascii-art = []

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"
anyhow = "1.0"
which = "7"
libc = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
